<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_medium">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_xxlarge"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:gravity="center_vertical|start"
        android:paddingHorizontal="@dimen/spacing_large"
        android:text="@string/cost_details"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/grey_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_large"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_total"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/grey_80" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/total_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100.00 USD"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorPrice" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tax"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/grey_80" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/price_tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10.00 USD"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorPrice" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_large"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/grey_80" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/shipping_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10.00 USD"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorPrice" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  +"
                android:textColor="@color/grey_20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_mxlarge"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_fess"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/grey_80"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/total_fees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="110.00 USD"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorPrice"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>