<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:minHeight="?attr/actionBarSize"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/spacing_large"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_history_add"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.balysv.materialripple.MaterialRippleLayout
                style="@style/RippleStyleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium">

                <ImageView
                    android:id="@+id/img_close"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:padding="@dimen/spacing_middle"
                    android:src="@drawable/ic_clear" />

            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_middle">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@drawable/edit_text_round"
                    android:hint="@string/hint_order_code"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_middle"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_middle">

            <TextView
                android:id="@+id/tv_message"
                android:paddingHorizontal="@dimen/spacing_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/grey_80"/>

            <ProgressBar
                android:id="@+id/progress_loading"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bt_submit"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:paddingHorizontal="@dimen/spacing_mlarge"
                android:text="@string/FIND"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/grey_90" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>